[project]
name = "brozne-acs-eda"
version = "0.1.0"
description = "Exploratory Data Analysis for U.S. Census ACS data with LLM-powered insights"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Tristan Groenewold", email = "famgroenewoldt@gmail.com" }
]
keywords = ["census", "acs", "eda", "data-analysis", "llm", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "psutil>=5.9.0",
    "statsmodels>=0.14.0",
    "shap>=0.45.0",
]

[project.urls]
Repository = "https://github.com/groenewt/bronze__acs_eda"

[project.scripts]
acs-eda = "main:main"

